welcome.lessons.welcome.array.has271.Has271.scala.error
has271:11: error: ';' expected but integer literal found.
      } else if ((nums(i+2)-(nums(i)-1)))<=2) {
                                           ^